--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('../../public/fonts//century-gothic/CenturyGothic-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('../../public/fonts//century-gothic/CenturyGothic-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 @import "tailwindcss";
 
 :root {
@@ -17,6 +33,10 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+}
+
+html {
+  font-family: 'Century Gothic', sans-serif;
 }
 
 body {
